# poetry-version-pipeline

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: lock-check.yaml  pr.yaml  release.yaml
