[project]
name = "poetry-version-pipeline"
version = "1.5"
description = "Debug poetry version pipeline"
authors = [{ name = "Ondrej Winter", email = "ondrej.winter@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
